; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/broadcom/bnx2x/extr_bnx2x_ethtool.c_bnx2x_test_dir_entry.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/broadcom/bnx2x/extr_bnx2x_ethtool.c_bnx2x_test_dir_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bnx2x = type { i32 }
%struct.code_entry = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bnx2x*, i32, i32*)* @bnx2x_test_dir_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bnx2x_test_dir_entry(%struct.bnx2x* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.bnx2x*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.code_entry, align 4
  store %struct.bnx2x* %0, %struct.bnx2x** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %10 = load %struct.bnx2x*, %struct.bnx2x** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = bitcast %struct.code_entry* %9 to i32*
  %13 = call i32 @bnx2x_nvram_read32(%struct.bnx2x* %10, i32 %11, i32* %12, i32 4)
  store i32 %13, i32* %8, align 4
  %14 = load i32, i32* %8, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %3
  %17 = load i32, i32* %8, align 4
  store i32 %17, i32* %4, align 4
  br label %22

18:                                               ; preds = %3
  %19 = load %struct.bnx2x*, %struct.bnx2x** %5, align 8
  %20 = load i32*, i32** %7, align 8
  %21 = call i32 @bnx2x_test_nvram_dir(%struct.bnx2x* %19, %struct.code_entry* %9, i32* %20)
  store i32 %21, i32* %4, align 4
  br label %22

22:                                               ; preds = %18, %16
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}

declare dso_local i32 @bnx2x_nvram_read32(%struct.bnx2x*, i32, i32*, i32) #1

declare dso_local i32 @bnx2x_test_nvram_dir(%struct.bnx2x*, %struct.code_entry*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
